Description: Updated the diagrams and documentation latex, pdf

--- a/CCW1_MusicBox/Music_box_victor/latex/presentation.tex
+++ b/CCW1_MusicBox/Music_box_victor/latex/presentation.tex
@@ -8,12 +8,12 @@
 %Information to be included in the title page:
 \title{Compulsory Assignment: Music Box}
 \author[Victor,Devidas,Leila,Biplav]{Victor J Hansen\inst{1}
-\and Devidas Kazokas\inst{2}
+\and Devidas Kazokas\inst{2} \break
 \and Leila Mozaffari\inst{3}
 \and Biplav Karna\inst{4}
 }
 \institute{USN Kongsberg}
-\date{2020}
+\date[ES-SHC4300,Feb 2020]{ Software/Hardware co-development of Embedded Systems } 
 
 \begin{document}
  
@@ -86,22 +86,16 @@ VHDL Design Walkthrough: Hierarchial
 \end{frame}
 
 \subsection{FSM Vhdl Implementation}
-\begin{large}
-Snippet of FSM.vhd
-\end{large}
 \begin{tiny}
-\lstinputlisting[language=Vhdl,breaklines=true]{../FSM.vhd}
+\lstinputlisting[language=Vhdl,breaklines=true,title={Snippet of FSM.vhd},frame=shadowbox]{../FSM.vhd}
 \end{tiny}
 
 \break
 
 \section{Simulation}
 \subsection{Simulation:TestBench Snippet}
-\begin{large}
-Snippet of testbench.vhd
-\end{large}
 \begin{tiny}
-\lstinputlisting[language=Vhdl,breaklines=true]{../testbench.vhd}
+\lstinputlisting[language=Vhdl,breaklines=true,title={Snippet of testbench,vhd},frame=shadowbox]{../testbench.vhd}
 \end{tiny}
 
 \break
