--- a/CCW1_MusicBox/Music_box_victor/latex/presentation.tex
+++ b/CCW1_MusicBox/Music_box_victor/latex/presentation.tex
@@ -7,8 +7,8 @@
  
 %Information to be included in the title page:
 \title{Compulsory Assignment: Music Box}
-\author[Victor,Devidas,Leila,Biplav]{Victor J Hansen\inst{1}
-\and Devidas Kazokas\inst{2} \break
+\author[Victor, Deivydas, Leila, Biplav]{Victor J. Hansen\inst{1}
+\and Deivydas Kazokas\inst{2} \break
 \and Leila Mozaffari\inst{3}
 \and Biplav Karna\inst{4}
 }
